# Real-Time-Job-Market-Intelligence-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  settings.yaml
docs/: mkdocs.yml
docs/docs/: index.md
metadata/: partitions_metadata.json
src/job_plat/: cli.py
src/job_plat/bronze/: parser_linkedin.py  url_builders.py
src/job_plat/config/: browser.py  config_loader.py  env_config.py  logconfig.py
src/job_plat/context/: context_builders.py  contexts.py
src/job_plat/dags/: dag_helpers.py  ingestion_dag.py  ml_dag.py  processing_dag.py  test_dag.py
src/job_plat/embeddings/: normalize.py  run_normalize.py
src/job_plat/genai/: client.py  prompts.py  run_genai.py
src/job_plat/ingestion/: connectors.py  job_schema.py  metadata.py  run_scrape.py  scrape_indeed.py  search_criteria.py
src/job_plat/job_embeddings/: build_job_embeddings.py
src/job_plat/nlp/: extract_skills.py  run_extract_skills.py  skills.py
src/job_plat/orchestration/: data_pipeline.py  ml_pipeline.py  (+1 more)
tests/: conftest.py  conftests.py  helpers.py
tests/fixtures/: contexts.py  datasets.py  partition_manager.py  sample_data.py  sample_dataframe.py
tests/ingestion/: test_connector_fetch.py  test_throttle.py
tests/integration/: test_gold_stage.py  test_silver_stage.py
tests/pipeline/: test_data_pipeline.py  test_ml_pipeline.py
tests/spark/: test_clean_jobs.py  test_dim_jobs.py  test_transformations.py
tests/unit/: test_enrich.py  test_http_client.py  test_scrapers.py  test_stages.py  test_write_jsonl.py
(+112 files in other folders)
